--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,11 @@
+click==7.1.1
+dominate==2.5.1
+Flask==1.1.2
+Flask-Bootstrap4==4.0.2
 fuzzywuzzy==0.18.0
+itsdangerous==1.1.0
+Jinja2==2.11.1
+MarkupSafe==1.1.1
 numpy==1.18.2
 pandas==1.0.3
 plotly==4.6.0
@@ -6,3 +13,5 @@ python-dateutil==2.8.1
 pytz==2019.3
 retrying==1.3.3
 six==1.14.0
+visitor==0.1.3
+Werkzeug==1.0.1
