--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ numpy==1.18.2
 pandas==1.0.3
 plotly==4.6.0
 python-dateutil==2.8.1
+python-Levenshtein==0.12.0
 pytz==2019.3
 retrying==1.3.3
 six==1.14.0
