--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ dominate==2.5.1
 Flask==1.1.2
 Flask-Bootstrap4==4.0.2
 fuzzywuzzy==0.18.0
+gunicorn==20.0.4
 itsdangerous==1.1.0
 Jinja2==2.11.1
 MarkupSafe==1.1.1
