--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,22 @@
-click==7.1.1
-dominate==2.5.1
-Flask==2.2.5
-Flask-Bootstrap4==4.0.2
+blinker==1.6.2
+click==8.1.7
+dominate==2.8.0
+Flask==2.3.3
+Flask-Bootstrap==3.3.7.1
 fuzzywuzzy==0.18.0
-gunicorn==20.0.4
-itsdangerous==1.1.0
-Jinja2==2.11.3
-MarkupSafe==1.1.1
-numpy==1.22.3
-pandas==1.4.2
-plotly==4.6.0
-python-dateutil==2.8.1
-python-Levenshtein==0.12.0
-pytz==2022.1
-retrying==1.3.3
-six==1.14.0
+importlib-metadata==6.8.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.3
+numpy==1.26.0
+packaging==23.1
+pandas==2.1.0
+plotly==5.17.0
+python-dateutil==2.8.2
+pytz==2023.3.post1
+six==1.16.0
+tenacity==8.2.3
+tzdata==2023.3
 visitor==0.1.3
-Werkzeug==2.2.3
+Werkzeug==2.3.7
+zipp==3.17.0
