--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,22 @@
-blinker==1.6.2
+blinker==1.8.2
 click==8.1.7
 dominate==2.8.0
-Flask==2.3.3
+Flask==3.0.3
 Flask-Bootstrap==3.3.7.1
 fuzzywuzzy==0.18.0
 importlib-metadata==6.8.0
 itsdangerous==2.1.2
 Jinja2==3.1.4
-MarkupSafe==2.1.3
-numpy==1.26.0
+Levenshtein==0.25.1
+MarkupSafe==2.1.5
+numpy==2.0.0
 packaging==23.1
-pandas==2.1.0
+pandas==2.2.2
 plotly==5.17.0
 python-dateutil==2.8.2
-pytz==2023.3.post1
+python-Levenshtein==0.25.1
+pytz==2024.1
+rapidfuzz==3.9.4
 six==1.16.0
 tenacity==8.2.3
 tzdata==2023.3
