--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,25 @@
 blinker==1.8.2
 click==8.1.7
-dominate==2.8.0
+dominate==2.9.1
 Flask==3.0.3
 Flask-Bootstrap==3.3.7.1
 fuzzywuzzy==0.18.0
-importlib-metadata==6.8.0
-itsdangerous==2.1.2
+importlib_metadata==8.5.0
+itsdangerous==2.2.0
 Jinja2==3.1.4
-Levenshtein==0.25.1
+Levenshtein==0.26.0
 MarkupSafe==2.1.5
-numpy==2.0.0
-packaging==23.1
-pandas==2.2.2
-plotly==5.17.0
-python-dateutil==2.8.2
-python-Levenshtein==0.25.1
-pytz==2024.1
-rapidfuzz==3.9.4
+numpy==2.1.1
+packaging==24.1
+pandas==2.2.3
+plotly==5.24.1
+python-dateutil==2.9.0.post0
+python-Levenshtein==0.26.0
+pytz==2024.2
+RapidFuzz==3.10.0
 six==1.16.0
-tenacity==8.2.3
-tzdata==2023.3
+tenacity==9.0.0
+tzdata==2024.2
 visitor==0.1.3
-Werkzeug==3.0.3
-zipp==3.19.1
+Werkzeug==3.0.4
+zipp==3.20.2
