--- a/requirements.txt
+++ b/requirements.txt
@@ -4,22 +4,23 @@ dominate==2.9.1
 Flask==3.1.0
 Flask-Bootstrap==3.3.7.1
 fuzzywuzzy==0.18.0
-importlib_metadata==8.5.0
+importlib_metadata==8.7.0
 itsdangerous==2.2.0
-Jinja2==3.1.5
-Levenshtein==0.26.1
+Jinja2==3.1.6
+Levenshtein==0.27.1
 MarkupSafe==3.0.2
-numpy==2.2.1
-packaging==24.2
+narwhals==1.38.2
+numpy==2.2.5
+packaging==25.0
 pandas==2.2.3
-plotly==5.24.1
+plotly==6.0.1
 python-dateutil==2.9.0.post0
-python-Levenshtein==0.26.1
-pytz==2024.2
-RapidFuzz==3.11.0
+python-Levenshtein==0.27.1
+pytz==2025.2
+RapidFuzz==3.13.0
 six==1.17.0
-tenacity==9.0.0
-tzdata==2024.2
+tenacity==9.1.2
+tzdata==2025.2
 visitor==0.1.3
 Werkzeug==3.1.3
 zipp==3.21.0
